--- a/pi1/templates/template_detail_artworks.html
+++ b/pi1/templates/template_detail_artworks.html
@@ -1,9 +1,14 @@
 <div class="list-work">
-  <div class="list-work-image image_loading" id="{{img_id}}">
-    {{#img_data_bool}}
-    <a href="http://cstest:8180/collectionspace/tenant/smk/download/{{img_data}}/Original" class="work-image"></a>
-    {{/img_data_bool}}
+  {{#img_data_bool}}
+  <div class="list-work-image image_loading" id="{{img_id}}">        
+    <a href="{{img_data}}" class="work-image"></a>    
   </div>
+  {{/img_data_bool}}
+  
+  {{#non_img_data_bool}}
+  <div class="list-work-image image_default"></div>
+  {{/non_img_data_bool}}
+  
   <div class="list-work-text">
   
         <!--Title-->
