--- a/pi1/templates/template_list_artworks.html
+++ b/pi1/templates/template_list_artworks.html
@@ -1,25 +1,44 @@
 <li class="list-work">
-  <div class="list-work-image image_loading" id="{{img_id}}">
-    {{#img_data_bool}}
-    <a href="http://cstest:8180/collectionspace/tenant/smk/download/{{img_data}}/Medium" class="work-image"></a>
-    {{/img_data_bool}}
-  </div>
-  <div class="list-work-text">	    	            	    	    
+  
+  
+  {{#url_bool}}
+  <a href="#" class="smk_link">
+  {{/url_bool}}
+  
+	   <!--with image -->
+	  {{#img_data_bool}}
+	  <div class="list-work-image image_loading" id="{{img_id}}">    
+	    <a href="#" class="work-image"></a>    
+	  </div>
+	  {{/img_data_bool}}
+	  
+	  <!--without image -->
+	  {{#non_img_data_bool}}
+	  <div class="list-work-image image_default"></div>
+	  {{/non_img_data_bool}}
+	  
+	  <div class="list-work-text">	    	            	    	    
 		    <div class="artist">			    
 			    <span class="artist-name">{{artist_name_s}}</span>
 			    {{#artist_auth_bool}}
-			    	<span class="artist_auth">({{artist_auth}})</span>
+			    <span class="artist_auth">({{artist_auth}})</span>
 			    {{/artist_auth_bool}}
 			</div>    
 		
+		   
+		    
 		    <div class="title-and-date">
 		    	  <span class="title-dk">{{title}} </span>
 		    	  <span class="dates">{{artwork_date}}</span>
 	    	</div>	    		    	
 	    
 	    	<div class="ref">{{ref_number}}</div>
-			
-  </div>      
+	  </div>  
+  
+  {{#url_bool}}
+  </a>
+  {{/url_bool}}
+			    
 </li>
 
 
