links til smk.dk's url

--- a/pi1/templates/template_list_artworks.html
+++ b/pi1/templates/template_list_artworks.html
@@ -2,7 +2,7 @@
   
   
   {{#url_bool}}
-  <a href="#" class="smk_link">
+  <a href="#" class="smk_link" id="{{img_id}}">
   {{/url_bool}}
   
 	   <!--with image -->
