refresh fund results numbers

--- a/pi1/templates/template_detail_artworks.html
+++ b/pi1/templates/template_detail_artworks.html
@@ -1,7 +1,7 @@
 <div class="list-work">
   {{#img_data_bool}}
   <div class="list-work-image image_loading" id="{{img_id}}">        
-    <a href="{{img_data}}" class="work-image"></a>    
+    <a href="{{img_link}}" class="work-image"></a>    
   </div>
   {{/img_data_bool}}
   
