--- a/pi1/templates/template_search.html
+++ b/pi1/templates/template_search.html
@@ -21,9 +21,15 @@
     </div>
 	
     <div class="right">
-		  <h1>Search after:</h1>
+    	<h1>Free text search:</h1>
 		  <div class="search">
-		  	  
+    			<div id="search_free" class="infoRow">					
+					<input type="text" id="query_free" name="query_free" autocomplete="off">				
+				</div>
+		  </div>
+		  	
+		  <h1>Search after:</h1>
+		  <div class="search">			  
 			  <div id="search_smk_collection" class="infoRow">
 					<span class="searchLabel">Artist name</span>
 					<input class="searchValue" type="text" id="query" name="query" autocomplete="off">				
