--- a/pi1/templates/template_detail_artworks.html
+++ b/pi1/templates/template_detail_artworks.html
@@ -29,7 +29,7 @@
 			  </div> 
         
         <div class="technique">{{technique}} </div>
-			  <div><span class="dim_brut">({{width_brut}} {{widthunit_brut}} x {{heigth_brut}} {{heigthunit_brut) </span></div>
+			  <div><span class="dim_brut">({{width_brut}} {{widthunit_brut}} x {{heigth_brut}} {{heigthunit_brut}}) </span></div>
  
 
 		    	<div class="ref">{{ref_number}} </div>
