--- a/pi1/templates/template_list.html
+++ b/pi1/templates/template_list.html
@@ -1,7 +1,7 @@
 
-    <div id="docs_smk_collection_detail"></div>	
+    <div id="docs_smk_collection_detail" class="search_smk_result_detail"></div>	
     
-    <div id="header">      
+    <div id="search_smk_header">      
       <div class="text">	      
 	      <h1>Browse SMK's collection online</h1>
       </div>      
@@ -36,18 +36,14 @@
 		 <div id="category"></div>
     </div>	
 	
-	<div class="left">         
-      
-      <div class="tagcloud" id="object_production_century_earliest"></div>
-      
-      <div class="tagcloud" id="prod_technique"></div>
-
-      <div class="tagcloud" id="artist_natio"></div>            
-
-      <div class="clear"></div>
+	<div id="search_smk_left">               
+	      <div class="tagcloud" id="object_production_century_earliest"></div>	      
+	      <div class="tagcloud" id="prod_technique"></div>	
+	      <div class="tagcloud" id="artist_natio"></div>            	
+	      <div class="clear"></div>
     </div>
 	
-    <div class="right">    					      
+    <div id="search_smk_right">    					      
 		<div id="result_smk_collection">		  		   		   
 		  <div id="navigation">
 		    <ul id="pager"></ul>
@@ -56,9 +52,7 @@
 		  </div>
 		  <ul id="docs_smk_collection" class="explorerList"></ul>
 		</div>
-
     </div>
-
    
     <div class="clear"></div>
 
