--- a/pi1/css/soeg.css
+++ b/pi1/css/soeg.css
@@ -21,7 +21,7 @@ a:hover {
   text-decoration: underline;
 }
 
-#search_wrapper {  
+#smk_search_wrapper {  
   margin: 0px auto;
   padding: 5px;
   background-color:#FFFFFF;
@@ -32,7 +32,7 @@ a:hover {
 
 /* header */
 
-#search_wrapper #header {
+#smk_search_wrapper #search_smk_header {
     border-bottom: 1px dotted #E5E2DE;
     display: block;
     height: 290px;
@@ -40,7 +40,7 @@ a:hover {
 }
 
 
-#search_wrapper #header .logo {
+#smk_search_wrapper #search_smk_header .logo {
   display: inline;
   float:left;
   min-width:270px;
@@ -49,7 +49,7 @@ a:hover {
   background-repeat: no-repeat;
 }
 
-#search_wrapper #header h3 {
+#smk_search_wrapper #search_smk_header h3 {
 	line-height: 1;
     clear: left;
     color: #333333;
@@ -58,7 +58,7 @@ a:hover {
     padding-top: 10px;
 }
 
-#search_wrapper #header h2 {
+#smk_search_wrapper #search_smk_header h2 {
   padding: 20px 0 5px 2px;
   font-size: 20px;
   letter-spacing: -2px;
@@ -66,16 +66,16 @@ a:hover {
   font-weight: 1;
 }
 
-#search_wrapper #header .text {
+#smk_search_wrapper #search_smk_header .text {
   display: inline;
 }
 
-#header h1 {
+#search_smk_header h1 {
   padding: 20px 0 5px 10px;
   font-size: 20px;
   letter-spacing: -2px;
 }
-#header h2 {
+#search_smk_header h2 {
   padding-left: 10px;
   color: #666;
   font-size: 14px;
@@ -127,21 +127,21 @@ padding: 5px 0 5px 15px;
 
 /* detail*/
 
-#detail_smk_collection_detail .image_loading{ 
+#docs_smk_collection_detail .image_loading{ 
 	background: url(../images/ajax-loader.gif) no-repeat center center;
 }
 
+
 /* right */
 
-.right {
+#search_smk_right {
   float: left;
   display: block;
   width: 660px;
-  padding: 10px 20px 10px 15px;
-  border-left: 1px solid #aaa;
+  padding: 10px 20px 10px 15px;  
   overflow:hidden;
 }
-.right h2 {
+#search_smk_right h2 {
   padding: 5px 0 5px 0;
   color: #B4241B;
   font-size: 20px;
@@ -149,7 +149,7 @@ padding: 5px 0 5px 15px;
   letter-spacing: -2px;
 }
 
-.right h1 {
+#search_smk_right h1 {
   clear: left;
   padding-top: 10px;
   margin-bottom: 1px;
@@ -157,21 +157,21 @@ padding: 5px 0 5px 15px;
   font-size: 13px;
 }
 
-.right .result_smk_collection{
+#search_smk_right .result_smk_collection{
     display: block;      
     margin: 15px 5px 5px;      
     min-height: 100px;    	
 }
 
 
-.right .img_{
+#search_smk_right .img_{
     border: 3px solid #CCCCCC;
     display: inline;  
     margin: 5px;
     max-height: 150px;        	
 }
 
-.right .text_{
+#search_smk_right .text_{
 	display: inline;
     float: left;
     padding-left: 10px;
@@ -251,13 +251,14 @@ padding: 5px 0 5px 15px;
 
 /* left */
 
-.left {
+#search_smk_left {
   display: block;
   float:left;
   padding: 0 0 10px 10px;
   overflow:hidden;
+  border-right: 1px solid #aaa;
 }
-.left h2 {
+#search_smk_left h2 {
   clear: left;
   padding-top: 10px;
   margin-bottom: 1px;
