--- a/pi1/templates/template_list.html
+++ b/pi1/templates/template_list.html
@@ -33,27 +33,18 @@
 		  <div id="selection"></div>		
 		
 		 <h3>Results</h3>
-		 <div id="category"></div>
-		 
-    </div>	
-	
-	<div id="search_smk_left">               
-	      <div class="tagcloud" id="object_production_century_earliest"></div>	      
-	      <div class="tagcloud" id="prod_technique"></div>	
-	      <div class="tagcloud" id="artist_natio"></div>            	
-	      <div class="clear"></div>
-    </div>
-	
-    <div id="search_smk_right">    					      
-		<div id="result_smk_collection">		  		   		   
-		  <div id="navigation">
-		    <ul id="pager"></ul>
-		    <div id="pager-header"></div>         
-		    <div id= "switch_smk_collection"></div>                        
-		  </div>
-		  <ul id="docs_smk_collection" class="explorerList"></ul>
-		</div>
-    </div>
+		 <div id="category"></div>		 
+    </div>		
+	  					      
+	<div id="result_smk_collection">		  		   		   
+	  <div id="navigation">
+	    <ul id="pager"></ul>
+	    <div id="pager-header"></div>         
+	    <div id= "switch_smk_collection"></div>                        
+	  </div>
+	  <div id="docs_smk_collection" class="explorerList"></div>
+	</div>
+   
    
     <div class="clear"></div>
 
