--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -18,7 +18,15 @@
               </ul>
               
               <h3 class="teaser__heading">
-                <a href="{{url}}" alt="{{title}}">{{title}}</a>
+               	<!-- show an artwork -->
+				{{#is_artwork}} 
+					<a href="{{url}}" alt="{{title}}">{{artist_name}}<br><i>{{title}}<span>&nbsp({{artwork_date}})</span></i></a> 
+				{{/is_artwork}}
+				
+				<!-- showing not an artwork -->
+				{{#not_is_artwork}} 
+					<a href="{{url}}" alt="{{title}}">{{title}}</a> 
+				{{/not_is_artwork}}
               </h3>
 
               <div class="teaser__description">
