--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -1,18 +1,22 @@
+<div class="view">
 
-    <div id="docs_smk_collection_detail" class="search_smk_result_detail"></div>	       	
+	<div class="container">
+		
+		<div id="searchfreetext"></div>
+		
+		<section class="section--main" role="main">
+			<div id="docs_smk_collection_detail" class="search_smk_result_detail"></div>
+				 
+			<div id="category"></div>
+			<div id="viewpicker"></div>  
+			<div id="search-filters">
+				<div id="artist_natio" class="search-filter"></div>
+				<div id="object_production_century_earliest" class="search-filter"></div>
+				<div id="prod_technique" class="search-filter"></div>		
+			</div>		  					      			  		   		   	  
+			<div id="smk_teasers" class="full_size"></div>		
+	   </section>
 	
-	<div id="searchfreetext"></div>
-	
-	<section class="section--main" role="main">	 
-		<div id="category"></div>
-		<div id="viewpicker"></div>  
-		<div id="search-filters">
-			<div id="artist_natio" class="search-filter"></div>
-			<div id="object_production_century_earliest" class="search-filter"></div>
-			<div id="prod_technique" class="search-filter"></div>		
-		</div>		  					      			  		   		   	  
-		<div id="docs_smk_collection" class="explorerList"></div>		
-   </section>
-   
-    <div class="clear"></div>
+	</div>
 
+</div>	
