--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -10,6 +10,7 @@
 			<div id="category"></div>
 			<div id="viewpicker"></div>  
 			<div id="search-filters">
+				<div id="artist_name_ss" class="search-filter"></div>
 				<div id="artist_natio" class="search-filter"></div>
 				<div id="object_production_century_earliest" class="search-filter"></div>
 				<div id="prod_technique" class="search-filter"></div>		
