--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -15,7 +15,7 @@
 				<div id="object_production_century_earliest" class="search-filter"></div>
 				<div id="prod_technique" class="search-filter"></div>		
 			</div>		  					      			  		   		   	  
-			<div id="smk_teasers" class="full_size"></div>		
+			<div id="smk_teasers"></div>		
 	   </section>
 	
 	</div>
