--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -70,5 +70,28 @@ a {
 	min-heigth: 198px;
 }
 
+.teaser--list {
+    margin-bottom: 0;
+    padding-bottom: 1.35em;
+    padding-top: 1.35em;
+    width: 45%;
+}
+
+.teaser--list .teaser__thumbnail {
+    float: left;
+    margin-bottom: 0;
+    margin-left: 4%;
+    width: 30%;
+}
+
+.teaser--list .teaser__content {
+    float: right;
+    width: 60%;
+}
+
+#smk_teasers .highlight{
+	background-color:#fff8ac;
+}
+
 
 
