--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -2,10 +2,10 @@
 
 	<div class="container">
 		
-		<div id="searchfreetext"></div>
+		<div id="searchbox"></div>
 		
 		<section class="section--main" role="main">
-			<div id="docs_smk_collection_detail" class="search_smk_result_detail"></div>
+			<div id="smk_detail"></div>
 				 
 			<div id="category"></div>
 			<div id="viewpicker"></div>  
