--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -8,7 +8,12 @@
 			<div id="smk_detail"></div>
 				 
 			<div id="category"></div>
+			
+			<div id="pager"></div>
+			<div id="pager-header"></div>  
+			
 			<div id="viewpicker"></div>  
+			
 			<div id="search-filters">
 				<div id="artist_name_ss" class="search-filter"></div>
 				<div id="artist_natio" class="search-filter"></div>
