Related works Widget - v1.0

--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -6,6 +6,7 @@
 		
 		<section class="section--main" role="main">
 			<div id="smk_detail"></div>
+			<div id="related-artworks"></div>
 				 
 			<div id="category"></div>
 			
