--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -3,6 +3,7 @@
 	<div class="container">
 		
 		<div id="searchbox"></div>
+		<div id="currentsearch"></div>		
 		
 		<section class="section--main" role="main">
 			<div id="smk_detail"></div>
