--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -1,6 +1,16 @@
 @CHARSET "ISO-8859-1";
 
 
+.location {
+    background: none repeat scroll 0 0 #fff8ac;
+    border-top: 5px solid #FFFFFF;
+    clear: both;
+    padding: 5px 10px;
+    font-size: 0.9em;
+    line-height: 1.5em;
+    margin: 0;
+}
+
 #currentsearch {
   padding: 0px 10px 15px 15px;
   /*font-size: 80%;*/
