--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -42,7 +42,16 @@
                 {{#meta}}
                   <li><span>{{key}}</span> {{value}}</li>
                 {{/meta}}
-              </ul>
+              </ul>							
+			  
+			 	
+			  <ul class="location">
+				{{#location}}
+					<li><span>{{key}}</span> {{value}}</li>
+				{{/location}}
+			  </ul>
+			 
+
             </div><!-- teaser__content -->
           </div><!-- teaser__wrapper -->
         </article><!-- teaser -->      
