--- a/pi1/templates/related.html
+++ b/pi1/templates/related.html
@@ -23,9 +23,10 @@
                 {{/categories}}
               </ul>
               
-              <h3 class="related__heading">               					 
-					<a href="{{url}}" alt="{{title}}">{{artist_name}}<br><i>{{title}}<span>&nbsp({{artwork_date}})</span></i></a> 
+              <h3 class="related__heading">
+					<a href="#" alt="{{title}}" class="article_artwork">{{artist_name}}<br><i>{{title}}<span>&nbsp({{artwork_date}})</span></i></a> 
               </h3>
+
               <ul class="related__meta">
                 {{#meta}}
                   <li><span>{{key}}</span> {{value}}</li>
