--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -20,7 +20,7 @@
 				<div id="artist_name_ss" class="search-filter"></div>
 				<div id="artist_natio" class="search-filter"></div>
 				<div id="object_production_century_earliest" class="search-filter"></div>
-				<div id="prod_technique" class="search-filter"></div>		
+				<div id="object_type" class="search-filter"></div>		
 			</div>		  					      			  		   		   	  
 			<div id="smk_teasers"></div>		
 	   </section>
