Change "current selected thumbnail" system

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -7,9 +7,7 @@
 {{#media}}
 	<div id="media-container">
 	  <div class="gallery">
-	    <div class="gallery__main image_loading" src="{{image}}" title="{{title}}" alt="{{title}}" img_id="{{img_id}}">
-	      
-	    </div>
+	    <div class="gallery__main image_loading" src="{{image}}" title="{{title}}" alt="{{title}}" img_id="{{img_id}}"></div>
 	
 	    <!-- Copyright notice -->
 	    <div class="gallery__copyright">&copy;&nbsp;{{copyright}}</div>
@@ -33,7 +31,7 @@
 	  </div>
 	
 	  <!-- Heading -->
-	  <h1 class="heading--m">{{artist_name}}<br><i>{{title}}<span>&nbsp({{artwork_date}})</span></i></h1>
+	  <h1 class="heading--m">{{artist_name}}<br><i>{{title}}</i><span>&nbsp({{artwork_date}})</span></h1>
 	
 	  <div class="cutoff">{{description}}</div>
 
