--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -25,7 +25,7 @@
               <h3 class="teaser__heading">
                	<!-- show an artwork -->
 				{{#is_artwork}} 
-					<a href="#" alt="{{title}}" class="article_artwork">{{artist_name}}<br><i>{{title}}<span>&nbsp({{artwork_date}})</span></i></a> 
+					<a href="#" alt="{{title}}" class="article_artwork">{{artist_name}}<br><i>{{title}}</i><span>&nbsp({{artwork_date}})</span></a> 
 				{{/is_artwork}}
 				
 				<!-- not showing an artwork -->
