--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -3,6 +3,15 @@
 	<div class="container">
 		
 		<div id="searchbox"></div>
+		
+		<div class="search-terms">
+			<ul>
+				<li><span>Lion</span> <a class="search-term__close" href="#"></a></li>
+				<li><span>Giraffe</span> <a class="search-term__close" href="#"></a></li>
+				<li><span>Slug</span> <a class="search-term__close" href="#"></a></li>
+			</ul>
+		</div>
+		
 		<div id="currentsearch"></div>		
 		
 		<section class="section--main" role="main">
