--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -44,12 +44,13 @@
                 {{/meta}}
               </ul>							
 			  
-			 	
+			 {{#is_artwork}} 	
 			  <ul class="location">
 				{{#location}}
 					<li><span>{{key}}</span> {{value}}</li>
 				{{/location}}
 			  </ul>
+			 {{/is_artwork}}
 			 
 
             </div><!-- teaser__content -->
