add "two-colums" / "full-width" on "list" / "grid" view mode

--- a/pi1/templates/related.html
+++ b/pi1/templates/related.html
@@ -1,8 +1,8 @@
 <div>
     <script id="relatedInitTemplate" type="text/template">	
 		<h3 class="heading--l heading--bordered">Relaterede v&aelig;ker</h3>
-		<div id="related-container-grid" class="col_3-grid">	
-        	<article class="related--grid col_3--grid"></article>
+		<div id="related-container-grid" class="full-width">	
+        	<article class="related--grid"></article>
 		</div>
 	 </script>
 	 	
