--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -1,7 +1,7 @@
 <div>
     <script id="teaserInitTemplate" type="text/template">	
-		<div id="teaser-container-grid" class="col_3-grid">	
-        	<article class="teaser--grid col_3--grid"></article>
+		<div id="teaser-container-grid" class="full-width">	
+        	<article class="teaser--grid"></article>
 		</div>
 	 </script>
 	 	
