Fix bug on click on "<a>" in "Thumbs" and "Teasers"

--- a/pi1/templates/thumb.html
+++ b/pi1/templates/thumb.html
@@ -3,8 +3,8 @@
 <script id="thumbTemplate" type="text/template">
 
 	    {{#thumbnails}}
-	    <div class="gallery__thumbnails">
-		  <h1>Delv&aelig;rker</h1>	    
+	    <div class="gallery__thumbnails">		  
+		<h3 class="gallery__subworks heading--section">Delv&aelig;rker</h3>    
 		  <ul>
 			{{#thumb}}	  
 	        <li src="{{image}}" alt="{{title}}" img_id="{{img_id}}" class="image_loading">
