--- a/pi1/templates/related.html
+++ b/pi1/templates/related.html
@@ -1,21 +1,21 @@
 <div>
     <script id="relatedInitTemplate" type="text/template">	
 		<h3 class="heading--l heading--bordered">Relaterede v&aelig;ker</h3>
-		<div id="related-container-grid" class="full-width">	
-        	<article class="related--grid"></article>
+		<div id="teaser-container-grid" class="full-width">	
+        	<article class="teaser--grid"></article>
 		</div>
 	 </script>
 	 	
 	 <script id="relatedArticleTemplate" type="text/template">	
 		{{#artworks}}		
-        <article class="related--grid">
-          <div class="related__wrapper">
-            <div class="related__thumbnail image_loading" src="{{thumbnail}}" alt="{{title}}" img_id="{{img_id}}">
+        <article class="teaser--grid">
+          <div class="teaser__wrapper">
+            <div class="teaser__thumbnail image_loading" src="{{thumbnail}}" alt="{{title}}" img_id="{{img_id}}">
               <a href="{{url}}" alt="{{title}} "></a>
             </div>
             
-            <div class="related__content">
-              <ul class="related__category">
+            <div class="teaser__content">
+              <ul class="teaser__category">
                 {{#categories}}
                   <li>
                     <a href="{{url}}">{{name}}</a>
@@ -23,18 +23,18 @@
                 {{/categories}}
               </ul>
               
-              <h3 class="related__heading">
+              <h3 class="teaser__heading">
 					<a href="#" alt="{{title}}" class="article_artwork">{{artist_name}}<br><i>{{title}}<span>&nbsp({{artwork_date}})</span></i></a> 
               </h3>
 
-              <ul class="related__meta">
+              <ul class="teaser__meta">
                 {{#meta}}
                   <li><span>{{key}}</span> {{value}}</li>
                 {{/meta}}
               </ul>
-            </div><!-- related__content -->
-          </div><!-- related__wrapper -->
-        </article><!-- related -->      
+            </div><!-- teaser__content -->
+          </div><!-- teaser__wrapper -->
+        </article><!-- teaser -->      
       {{/artworks}}	 
 	</script>	
 </div>
