print button - without pre-visualization

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -28,6 +28,7 @@
 	    <a target="_blank" href="https://twitter.com/intent/tweet?text=INSERT_DESCRIPTION&amp;url=INSERT_URL&amp;via=INSERT_TWITTER_HANDLE">Tweet This</a>
 	    <a target="_blank" href="https://plus.google.com/share?url=INSERT_URL">Plus on Google+</a>
 	    <a target="_blank" href="http://pinterest.com/pin/create/button/?url=INSERT_URL&amp;description=INSERT_DESCRIPTION">Pin on Pinterest</a>
+		<a target="_blank" onclick="window.print()">Print</a>
 	  </div>
 	
 	  <!-- Heading -->
