Front end modifications (fields, visualization etc...)

--- a/pi1/templates/related.html
+++ b/pi1/templates/related.html
@@ -24,7 +24,7 @@
               </ul>
               
               <h3 class="teaser__heading">
-					<a href="#" alt="{{title}}" class="article_artwork">{{artist_name}}<br><i>{{title}}<span>&nbsp({{artwork_date}})</span></i></a> 
+					<a href="#" alt="{{title}}" class="article_artwork">{{artist_name}}<br><i>{{title}}</i></a> 
               </h3>
 
               <ul class="teaser__meta">
