--- a/pi1/templates/category.html
+++ b/pi1/templates/category.html
@@ -1,7 +1,7 @@
 <div>	
 	 <script id="categoryItemsTemplate" type="text/template">	
 		<ul class="tabs">	 	
-			{{#categories}}<li name="{{facetname}}" {{#active}}class="tab--active"{{/active}}><a href="#">{{facettext}} <span>({{count}})</span></a></li>{{/categories}}
+			{{#categories}}<li name="{{facetname}}" {{#active}}class="tab--active"{{/active}}><a href="#">{{{facettext}}} <span>({{count}})</span></a></li>{{/categories}}
 		</ul>		 	
 	</script>	
 </div>
