--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -32,7 +32,7 @@
 	  </div>
 	
 	  <!-- Heading -->
-	  <h1 class="heading--m">{{artist_name}}<br><i>{{title}}</i><span>&nbsp({{artwork_date}})</span></h1>
+	  <h1 class="heading--m">{{{artist_data}}}<br><i>{{title}}</i>&nbsp;<span>({{artwork_date}})</span></h1>
 	
 	  <div class="cutoff">{{description}}</div>
 
@@ -67,7 +67,7 @@
 	  <div class="data-pairs">
 	    <div class="data-pair">
 	      <div class="data-pair__key">{{key}}</div>
-	      <div class="data-pair__value">{{method}}, {{source}} - {{date}}</div>		  
+	      <div class="data-pair__value">{{method}}{{source}}{{date}}</div>		  
 	    </div>	    
 	  </div><!-- data-pairs -->
 	  {{/acq}}
