--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -25,7 +25,7 @@
               <h3 class="teaser__heading">
                	<!-- show an artwork -->
 				{{#is_artwork}} 
-					<a href="#" alt="{{title}}" class="article_artwork">{{artist_name}}<br><i>{{title}}</i><span>&nbsp({{artwork_date}})</span></a> 
+					<a href="#" alt="{{title}}" class="article_artwork">{{{artist_data}}}<br><i>{{title}}</i><span>&nbsp({{artwork_date}})</span></a> 
 				{{/is_artwork}}
 				
 				<!-- not showing an artwork -->
@@ -44,7 +44,7 @@
                   <li><span>{{key}}</span> {{value}}</li>
 				  {{#is_artwork}}
 				  	{{#location}}
-						<li>Location: {{value}}</li>
+						<li>{{{label}}}</li>
 				  	{{/location}}
 				  {{/is_artwork}}
                 {{/meta}}
