--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -24,7 +24,6 @@
 			</div>		  					      			  		   		   	  
 			<div id="smk_teasers"></div>		
 	   </section>
-	
 	</div>
-
+	<div class="modal"></div>
 </div>	
