--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -1,5 +1,52 @@
 @CHARSET "ISO-8859-1";
 
+
+
+/* Start by setting display:none to make this hidden.
+   Then we position it in relation to the viewport window
+   with position:fixed. Width, height, top and left speak
+   speak for themselves. Background we set to 80% white with
+   our animation centered, and no-repeating */
+.modal {
+	
+    background: url("../images/ajax_loader_gray_64.gif") no-repeat fixed 50% 50% rgba(255, 255, 255, 0.8);
+    height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    position: fixed;
+    top: 0;
+    width: 882px;
+    z-index: 1000;
+    display:    none;
+    
+    /*
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    background: rgba( 255, 255, 255, .8 ) 
+                url('http://i.stack.imgur.com/FhHRx.gif') 
+                50% 50% 
+                no-repeat;
+                */
+}
+
+/* When the body has the loading class, we turn
+   the scrollbar off with overflow:hidden */
+#smk_search_wrapper.modal_loading {
+    overflow: hidden;   
+}
+
+/* Anytime the body has the loading class, our
+   modal element will be visible */
+#smk_search_wrapper.modal_loading .modal {
+    display: block;
+}
+
+
 .heading--m span {
     font-size: 0.8em;
 }
