--- a/pi1/templates/chosen.html
+++ b/pi1/templates/chosen.html
@@ -10,6 +10,7 @@
         		{{/values}}       
       		</select>
     	</div><!-- chosen -->
+		<div class="modal"></div>
 		{{/options}}
 	</script>
 </div>
