--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -1,8 +1,9 @@
 <div>
     <script id="teaserInitTemplate" type="text/template">	
 		<div id="teaser-container-grid" class="full-width">	
-        	<article class="teaser--grid"></article>
+        	<article class="teaser--grid"></article>			
 		</div>
+		<div class="modal"></div>
 	 </script>
 	 	
 	 <script id="teaserArticleTemplate" type="text/template">	
