--- a/pi1/css/smk_modif.css
+++ b/pi1/css/smk_modif.css
@@ -8,7 +8,7 @@
    speak for themselves. Background we set to 80% white with
    our animation centered, and no-repeating */
 .modal {
-	
+	/*
     background: url("../images/ajax_loader_gray_64.gif") no-repeat fixed 50% 50% rgba(255, 255, 255, 0.8);
     height: 100%;
     margin-left: auto;
@@ -17,9 +17,9 @@
     top: 0;
     width: 882px;
     z-index: 1000;
-    display:    none;
+    display:    none;*/
     
-    /*
+    
     display:    none;
     position:   fixed;
     z-index:    1000;
@@ -28,24 +28,47 @@
     height:     100%;
     width:      100%;
     background: rgba( 255, 255, 255, .8 ) 
-                url('http://i.stack.imgur.com/FhHRx.gif') 
+                url('../images/ajax_loader_gray_64.gif') 
                 50% 50% 
                 no-repeat;
-                */
+                
 }
 
 /* When the body has the loading class, we turn
    the scrollbar off with overflow:hidden */
-#smk_search_wrapper.modal_loading {
+#smk_teasers.modal_loading {
+    overflow: hidden;   
+}
+#artist_name_ss.modal_loading {
+    overflow: hidden;   
+}
+#object_type.modal_loading {
+    overflow: hidden;   
+}
+#object_production_century_earliest.modal_loading {
+    overflow: hidden;   
+}
+#artist_natio.modal_loading {
     overflow: hidden;   
 }
 
 /* Anytime the body has the loading class, our
    modal element will be visible */
-#smk_search_wrapper.modal_loading .modal {
+#smk_teasers.modal_loading .modal {
     display: block;
 }
-
+#artist_name_ss.modal_loading .modal {
+    display: block;
+}
+#object_type.modal_loading .modal {
+    display: block;
+}
+#object_production_century_earliest.modal_loading .modal {
+    display: block;
+}
+#artist_natio.modal_loading .modal {
+    display: block;
+}
 
 .heading--m span {
     font-size: 0.8em;
