--- a/pi1/templates/related.html
+++ b/pi1/templates/related.html
@@ -4,6 +4,7 @@
 		<div id="teaser-container-grid" class="full-width">	
         	<article class="teaser--grid"></article>
 		</div>
+		<div class="modal"></div>
 	 </script>
 	 	
 	 <script id="relatedArticleTemplate" type="text/template">	
