open links to SMK's website in a new window

--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -10,7 +10,12 @@
         <article class="teaser--grid">
           <div class="teaser__wrapper">
             <div class="teaser__thumbnail image_loading" src="{{thumbnail}}" alt="{{title}}" img_id="{{img_id}}">
-              <a href="{{url}}" alt="{{title}} "></a>
+              	{{#is_artwork}} 
+					<a href="{{url}}" alt="{{title}}" class="article_artwork"></a>
+				{{/is_artwork}}
+				{{#not_is_artwork}} 
+					<a href="{{url}}" alt="{{title}}" class="article_link"></a>
+				{{/not_is_artwork}} 
             </div>
             
             <div class="teaser__content">
@@ -30,7 +35,7 @@
 				
 				<!-- not showing an artwork -->
 				{{#not_is_artwork}} 
-					<a href="{{url}}" alt="{{title}}">{{title}}</a> 
+					<a href="{{url}}" alt="{{title}}" class="article_link">{{title}}</a> 
 				{{/not_is_artwork}}
               </h3>
 
