Century facet visualization

--- a/pi1/templates/chosen.html
+++ b/pi1/templates/chosen.html
@@ -6,7 +6,7 @@
 	      	<select data-placeholder="{{title}}..." multiple>
     	    	<option value=""></option>
         		{{#values}}
-        			<option value="{{value}}">{{text}} {{#count}}({{count}}){{/count}}</option>
+        			<option value="{{value}}">{{{text}}} {{#count}}({{count}}){{/count}}</option>
         		{{/values}}       
       		</select>
     	</div><!-- chosen -->
