--- a/pi1/templates/general_template.html
+++ b/pi1/templates/general_template.html
@@ -10,11 +10,12 @@
 			<div id="related-artworks"></div>
 				 
 			<div id="category"></div>
-			
-			<div id="pager"></div>
-			<div id="pager-header"></div>  
-			
-			<div id="viewpicker"></div>  
+			<div class="search-actions">
+				<div id="pager"></div>
+				<div id="pager-header"></div>  
+				<div id="sorter"></div>
+				<div id="viewpicker"></div>
+			</div>  
 			
 			<div id="search-filters">
 				<div id="artist_name_ss" class="search-filter"></div>								
