Multilanguage: Detail + common.smk.js

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -53,10 +53,10 @@
 	    <div class="data-pair">
 	      <div class="data-pair__key">{{key}}</div>							
 			{{#net}}	      		
-				<div class="data-pair__value">Netto: {{heigth}}&nbsp;x&nbsp;{{width}}&nbsp;{{unit}}</div>
+				<div class="data-pair__value">{{net_label}}: {{heigth}}&nbsp;x&nbsp;{{width}}&nbsp;{{unit}}</div>
 			{{/net}}
 		  {{#brut}}
-	      		<div class="data-pair__value">Brutto: {{heigth}}&nbsp;x&nbsp;{{width}}&nbsp;{{unit}}</div>
+	      		<div class="data-pair__value">{{brut_label}}: {{heigth}}&nbsp;x&nbsp;{{width}}&nbsp;{{unit}}</div>
 			{{/brut}}
 	    </div>	    
 	  </div><!-- data-pairs -->
