--- a/pi1/templates/search_box.html
+++ b/pi1/templates/search_box.html
@@ -4,7 +4,7 @@
 		 <form role="search" method="get" class="search-box" action="">
 		   <label for="search">Search for</label>
 		   <input class="typeahead field" type="text" value="" name="search" id="search" placeholder="{{{default_text}}}" autocomplete="off" spellcheck="false" dir="auto" />
-		   <input class="button" type="submit" value="Search" />
+		   <input class="button" type="submit" value="{{{search}}}" />
 		 </form>
  
  	</script>
