--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -30,7 +30,7 @@
               <h3 class="teaser__heading">
                	<!-- show an artwork -->
 				{{#is_artwork}} 
-					<a href="#" alt="{{title}}" class="article_artwork">{{{artist_data}}}<br><i>{{title}}</i><span>&nbsp({{artwork_date}})</span></a> 
+					<a href="#" alt="{{title}}" class="article_artwork">{{{artist_data}}}<br>{{title}}&nbsp({{artwork_date}})</a> 
 				{{/is_artwork}}
 				
 				<!-- not showing an artwork -->
