--- a/pi1/templates/thumb.html
+++ b/pi1/templates/thumb.html
@@ -3,7 +3,7 @@
 <script id="thumbTemplate" type="text/template">
 
 	    {{#thumbnails}}
-	    <h3 class="gallery__subworks heading--section">Delv&aelig;rker</h3> 
+	    <h3 class="gallery__subworks heading--section">{{{label}}}</h3> 
 		<div class="gallery__thumbnails">		  		   
 		  <ul>
 			{{#thumb}}	  
