* qf parameter (search with weights) * search box now searchs on "q" parameter (insted of "fq")

--- a/pi1/templates/current.html
+++ b/pi1/templates/current.html
@@ -4,7 +4,7 @@
 			<ul>	 	
 				{{#current}}
 					{{#label}}
-						<li><span>{{label}}</span> <a fq="{{fq}}" class="search-term__close" href="#"></a></li>
+						<li><span>{{label}}</span> <a q="{{q}}" class="search-term__close" href="#"></a></li>
 					{{/label}}
 				{{/current}}
 			</ul>
