--- a/pi1/templates/sorter.html
+++ b/pi1/templates/sorter.html
@@ -1,7 +1,7 @@
 <div>	
 	<script id="sorterItemsTemplate" type="text/template">		 		
 		<div class="sort-by-picker chosen--simple chosen--small">
-		  <label>{{label}}</label>
+		  <label>{{{label}}}</label>
 		  <select>
 		    {{#options}}<option value="{{value}}" {{#selected}}selected{{/selected}}>{{{text}}}</option>{{/options}}		   
 		  </select>
