Copyright: computed after artist's birth & death dates

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -10,7 +10,9 @@
 	    <div class="gallery__main image_loading" src="{{image}}" title="{{title}}" alt="{{title}}" img_id="{{img_id}}"></div>
 	
 	    <!-- Copyright notice -->
+		{{#copyright}}
 	    <div class="gallery__copyright">&copy;&nbsp;{{copyright}}</div>
+		{{/copyright}}
 	
 		<!-- thumbnails -->
 		<div id="thumbnails"></div>  	  
