Minor visualization modifications

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -34,7 +34,7 @@
 	  </div>
 	
 	  <!-- Heading -->
-	  <h1 class="heading--m">{{{artist_data}}}<br><i>{{title}}</i>&nbsp;<span>({{artwork_date}})</span></h1>
+	  <h1 class="heading--m">{{{artist_data}}}<br><i>{{title}}</i>&nbsp;<span>{{artwork_date}}</span></h1>
 	
 	  <div class="cutoff">{{description}}</div>
 
