--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -74,6 +74,16 @@
 	  </div><!-- data-pairs -->
 	  {{/acq}}
 
+	<!-- Data pairs (provenance) -->
+	  {{#proveniens}}
+	  <div class="data-pairs">
+	    <div class="data-pair">
+	      <div class="data-pair__key">{{key}}</div>
+	      <div class="data-pair__value">{{value}}</div>		  
+	    </div>	    
+	  </div><!-- data-pairs -->
+	  {{/proveniens}}
+
 	  <!-- Data pairs (inventar number) -->
 	  {{#meta}}
 	  <div class="data-pairs">
