Detail: display the first set of dimensions (order by rank in in CS)

--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -53,13 +53,8 @@
 	  {{#dim}}
 	  <div class="data-pairs">
 	    <div class="data-pair">
-	      <div class="data-pair__key">{{key}}</div>							
-			{{#net}}	      		
-				<div class="data-pair__value">{{net_label}}: {{heigth}}&nbsp;x&nbsp;{{width}}&nbsp;{{unit}}</div>
-			{{/net}}
-		  {{#brut}}
-	      		<div class="data-pair__value">{{brut_label}}: {{heigth}}&nbsp;x&nbsp;{{width}}&nbsp;{{unit}}</div>
-			{{/brut}}
+	      <div class="data-pair__key">{{key}}</div>											      		
+				<div class="data-pair__value">{{heigth}}{{width}}{{depth}}&nbsp;{{unit}}</div>			
 	    </div>	    
 	  </div><!-- data-pairs -->
 	  {{/dim}}	
