Teasers: show technique

--- a/pi1/templates/teasers.html
+++ b/pi1/templates/teasers.html
@@ -39,9 +39,11 @@
 				{{/not_is_artwork}}
               </h3>
 
+			  {{#description}}
               <div class="teaser__description">
                 {{description}}
               </div>
+			  {{/description}}
 
 			  <!-- location -->
               <ul class="teaser__meta">
