--- a/pi1/templates/detail.html
+++ b/pi1/templates/detail.html
@@ -34,7 +34,11 @@
 	  </div>
 	
 	  <!-- Heading -->
-	  <h1 class="heading--m">{{{artist_data}}}<br><i>{{title}}</i>&nbsp;<span>{{artwork_date}}</span></h1>
+	{{#artist}}
+	  <h1 class="heading--m">{{{artist_data}}}</h1>
+ 	{{/artist}}
+  
+	  <h1 class="heading--m"><i>{{title}}</i>&nbsp;<span>{{artwork_date}}</span></h1>
 	
 	  <div class="cutoff">{{description}}</div>
 
